#pragma once

class abstract_product {

    public:

        virtual void operator()() const = 0;

};
